<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="#F5F5F5"
    android:paddingBottom="50dp"
    tools:showIn="@layout/activity_scrolling"
    android:layout_gravity="center_vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/lv11"
                android:layout_width="0dp"
                android:layout_height="190dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/rec"
                android:clickable="true"
                android:elevation="4sp"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical"
                android:focusable="true">

                <ImageView
                    android:id="@+id/team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="Team"
                    android:layout_gravity="center"
                    android:src="@drawable/account_multiple"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv12"
                android:layout_width="0dp"
                android:layout_height="190dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/rec"
                android:clickable="true"
                android:elevation="4sp"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/trophy"
                    android:contentDescription="Trophy"
                    android:layout_gravity="center"
                    android:id="@+id/trophy"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/achievements"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp">
            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="0dp"
                android:layout_height="190dp"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rec"
                android:clickable="true"
                android:elevation="4sp"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_description_black_24dp"
                    android:layout_gravity="center"
                    android:contentDescription="Projects"
                    android:id="@+id/project"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/projects"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="0dp"
                android:layout_height="190dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/rec"
                android:clickable="true"
                android:elevation="4sp"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_filter_frames_black_24dp"
                    android:layout_gravity="center"
                    android:contentDescription="Workshop"
                    android:id="@+id/workshop"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/workshop"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>

    </GridLayout>

</android.support.v4.widget.NestedScrollView>